Remove BuildInfo